--- a/packages/expressive-code-auto-diff/package.json
+++ b/packages/expressive-code-auto-diff/package.json
@@ -15,18 +15,19 @@
   "scripts": {
     "dev": "tsdown --watch",
     "build": "tsdown",
+    "test": "vitest",
     "lint": "eslint . --cache --max-warnings=0",
     "prepublishOnly": "pnpm build"
   },
   "dependencies": {
-    "git-diff": "^2.0.6"
+    "jest-diff": "^29.7.0"
   },
   "devDependencies": {
-    "@types/git-diff": "^2.0.7",
-    "tsdown": "^0.11.9"
+    "tsdown": "^0.11.9",
+    "vitest": "^3.1.3"
   },
   "peerDependencies": {
-    "@expressive-code/core": ">=0.38.0"
+    "@expressive-code/core": ">=0.41.0"
   },
   "engines": {
     "node": ">=18"
