--- a/packages/remark-expressive-code-auto-diff/package.json
+++ b/packages/remark-expressive-code-auto-diff/package.json
@@ -5,16 +5,19 @@
   "description": "// TODO(HiDeoo)",
   "author": "HiDeoo <github@hideoo.dev> (https://hideoo.dev)",
   "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./index.ts",
-    "./package.json": "./package.json"
+    "types": "./dist/index.d.ts",
+    "default": "./dist/index.js"
   },
   "scripts": {
-    "// TODO(HiDeoo) ": "// TODO(HiDeoo) ",
     "dev": "tsdown --watch",
     "build": "tsdown",
     "test": "vitest",
-    "lint": "eslint . --cache --max-warnings=0"
+    "lint": "eslint . --cache --max-warnings=0",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "jest-diff": "^29.7.0",
@@ -26,9 +29,6 @@
     "unified": "^11.0.5",
     "vitest": "^3.1.3"
   },
-  "peerDependencies": {
-    "@expressive-code/core": ">=0.41.0"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -38,8 +38,7 @@
     "provenance": true
   },
   "sideEffects": false,
-  "// TODO(HiDeoo) ": "// TODO(HiDeoo) ",
-  "asdasdasdfiles2": [
+  "files": [
     "dist"
   ],
   "keywords": [
