--- a/packages/remark-expressive-code-auto-diff/package.json
+++ b/packages/remark-expressive-code-auto-diff/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/mdast": "^4.0.4",
+    "remark": "^15.0.1",
     "tsdown": "^0.11.9",
     "unified": "^11.0.5",
     "vitest": "^3.1.3"
