--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remark-expressive-code-auto-diff-docs",
+  "name": "remark-auto-diff-docs",
   "version": "0.0.1",
   "license": "MIT",
   "description": "// TODO(HiDeoo)",
@@ -17,7 +17,7 @@
     "@astrojs/starlight": "^0.34.3",
     "@hideoo/starlight-plugins-docs-components": "^0.4.0",
     "astro": "^5.7.13",
-    "remark-expressive-code-auto-diff": "workspace:*",
+    "remark-auto-diff": "workspace:*",
     "sharp": "^0.34.1"
   },
   "engines": {
@@ -29,11 +29,11 @@
   "keywords": [
     "// TODO(HiDeoo)"
   ],
-  "homepage": "https://github.com/HiDeoo/remark-expressive-code-auto-diff",
+  "homepage": "https://github.com/HiDeoo/remark-auto-diff",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HiDeoo/remark-expressive-code-auto-diff.git",
+    "url": "https://github.com/HiDeoo/remark-auto-diff.git",
     "directory": "docs"
   },
-  "bugs": "https://github.com/HiDeoo/remark-expressive-code-auto-diff/issues"
+  "bugs": "https://github.com/HiDeoo/remark-auto-diff/issues"
 }
