--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "name": "remark-auto-diff-docs",
   "version": "0.0.1",
   "license": "MIT",
-  "description": "// TODO(HiDeoo)",
+  "description": "A remark plugin providing an alternative syntax to author diff code blocks in Markdown.",
   "author": "HiDeoo <github@hideoo.dev> (https://hideoo.dev)",
   "type": "module",
   "scripts": {
@@ -27,7 +27,10 @@
   "private": true,
   "sideEffects": false,
   "keywords": [
-    "// TODO(HiDeoo)"
+    "markdown",
+    "remark",
+    "plugin",
+    "diff"
   ],
   "homepage": "https://github.com/HiDeoo/remark-auto-diff",
   "repository": {
